--- a/html/about.html
+++ b/html/about.html
@@ -12,8 +12,19 @@
     <title>Branc Name</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
+    <div class="content-padding navbar blue">
+        <header class="logo">
+            BRAND NAME
+        </header>
+        <!-- start nav section  -->
+        <nav class="nav-container">
+            <!-- css container for nav  -->
+                <a href="index.html">home</a>
+                <a href="about.html" class="active">about</a>
+                <a href="services.html">services</a>
+                <a href="contact.html">contact</a>
+        </nav>
+    </div>
     <main>
         <div class="blue content-padding">
             <h1 class="heading">About Us</h1>
