--- a/html/index.html
+++ b/html/index.html
@@ -14,160 +14,172 @@
     <title>Branc Name</title>
 </head>
 <body>
-        <header></header>
-        <nav></nav>
-        <main>
-            <div class="blue content-padding">
-                <h1 class="heading">The Most Reliable Web Design and Development Services In Toronto</h1>
-                <p class="heading-text">
-                    We can deliver and develop websites and mobile applications as per your needs.
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
-                </p>
-            </div>
-            <div>
-                <div class="card-container content-padding">
-                    <div class="inner-box">
-                        <img src="../img/team2.jpg" alt="Team">
-                    </div>
-                    <div class="inner-box">
-                        <h2>
-                            Who are we?
-                        </h2>
-                        <h2>
-                            A Team of Full Stack Software Developers
-                            with work experience in various 
-                            organizations from startups to MNC’s
-                        </h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                            ex ea commodo consequat. Duis aute irure 
-                        </p>
-                    </div>
+    <div class="content-padding navbar blue">
+        <header class="logo">
+            BRAND NAME
+        </header>
+        <!-- start nav section  -->
+        <nav class="nav-container">
+            <!-- css container for nav  -->
+                <a href="index.html" class="active">home</a>
+                <a href="about.html">about</a>
+                <a href="services.html">services</a>
+                <a href="contact.html">contact</a>
+        </nav>
+    </div>
+    <!-- end nav section -->
+    <main>
+        <div class="blue content-padding pt0">
+            <h1 class="heading mt0">The Most Reliable Web Design and Development Services In Toronto</h1>
+            <p class="heading-text">
+                We can deliver and develop websites and mobile applications as per your needs.
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+            </p>
+        </div>
+        <div>
+            <div class="card-container content-padding">
+                <div class="inner-box">
+                    <img src="../img/team2.jpg" alt="Team">
+                </div>
+                <div class="inner-box">
+                    <h2>
+                        Who are we?
+                    </h2>
+                    <h2>
+                        A Team of Full Stack Software Developers
+                        with work experience in various 
+                        organizations from startups to MNC’s
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea commodo consequat. Duis aute irure 
+                    </p>
                 </div>
             </div>
-            <div class="content-padding">
-                <h1 class="sub-heading">Our Services</h1>
-                <div class="card-container">
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
+        </div>
+        <div class="content-padding">
+            <h1 class="sub-heading">Our Services</h1>
+            <div class="card-container">
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
                 </div>
-                <div class="btm-container">
-                    <button>
-                        See all services
-                    </button>
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                </div>
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
                 </div>
             </div>
-            <div class="content-padding blue">
-                <h1 class="sub-heading white">Our Portfolio</h1>
-                <div class="card-container img-link">
-                    <img src="../img/team2.jpg" alt="Team">
-                    <img src="../img/team2.jpg" alt="Team">
-                    <img src="../img/team2.jpg" alt="Team">
-                    <img src="../img/team2.jpg" alt="Team">
-                    <img src="../img/team2.jpg" alt="Team">
-                    <img src="../img/team2.jpg" alt="Team">
-                </div>
-            </div>
-            <div class="content-padding">
-                <h1 class="sub-heading">Reviews</h1>
-                <div class="card-container">
-                    <div class="card">
-                        <div class="img-container">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                        </div>
-                        <p class="review">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                        <p class="reviewer">
-                            Jay, Google
-                        </p>
-                    </div>
-                    <div class="card">
-                        <div class="img-container">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                        </div>
-                        <p class="review">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                        <p class="reviewer">
-                            Jay, Google
-                        </p>
-                    </div>
-                    <div class="card">
-                        <div class="img-container">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                            <img class="star" src="../img/star.jpg" alt="Rating">
-                        </div>
-                        <p class="review">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                        <p class="reviewer">
-                            Jay, Google
-                        </p>
-                    </div>
-                </div>
-                <div class="btm-container">
-                    <button>
-                        Know more about us
-                    </button>
-                </div>
-            </div>
-            <div class="banner">
-                <p>Got any questions?</p>
+            <div class="btm-container">
                 <button>
-                    Contact us
+                    See all services
                 </button>
             </div>
-        </main>
-        <footer></footer>
+        </div>
+        <div class="content-padding blue">
+            <h1 class="sub-heading white">Our Portfolio</h1>
+            <div class="card-container img-link">
+                <img src="../img/team2.jpg" alt="Team">
+                <img src="../img/team2.jpg" alt="Team">
+                <img src="../img/team2.jpg" alt="Team">
+                <img src="../img/team2.jpg" alt="Team">
+                <img src="../img/team2.jpg" alt="Team">
+                <img src="../img/team2.jpg" alt="Team">
+            </div>
+        </div>
+        <div class="content-padding">
+            <h1 class="sub-heading">Reviews</h1>
+            <div class="card-container">
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+            </div>
+            <div class="btm-container">
+                <button>
+                    Know more about us
+                </button>
+            </div>
+        </div>
+        <div class="banner">
+            <p>Got any questions?</p>
+            <button>
+                Contact us
+            </button>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
