--- a/html/services.html
+++ b/html/services.html
@@ -12,94 +12,105 @@
     <title>Branc Name</title>
 </head>
 <body>
-        <header></header>
-        <nav></nav>
-        <main>
-            <div class="blue content-padding">
-                <h1 class="heading">Services</h1>
-                <p class="heading-text">
-                    We can deliver and develop websites and mobile applications as per your needs.
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
-                </p>
-            </div>
-            <div class="content-padding">
-                <h1 class="sub-heading">Our Services</h1>
-                <div class="card-container">
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
-                        <p class="svc-name">
-                            UI & UX
-                        </p>
-                        <p class="svc-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                            corporis, unde ea!
-                        </p>
-                    </div>
+    <div class="content-padding navbar blue">
+        <header class="logo">
+            BRAND NAME
+        </header>
+        <!-- start nav section  -->
+        <nav class="nav-container">
+            <!-- css container for nav  -->
+                <a href="index.html">home</a>
+                <a href="about.html">about</a>
+                <a href="services.html" class="active">services</a>
+                <a href="contact.html">contact</a>
+        </nav>
+    </div>
+    <main>
+        <div class="blue content-padding">
+            <h1 class="heading">Services</h1>
+            <p class="heading-text">
+                We can deliver and develop websites and mobile applications as per your needs.
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+            </p>
+        </div>
+        <div class="content-padding">
+            <h1 class="sub-heading">Our Services</h1>
+            <div class="card-container">
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                </div>
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                </div>
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                </div>
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                </div>
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                </div>
+                <div class="card">
+                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <p class="svc-name">
+                        UI & UX
+                    </p>
+                    <p class="svc-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
                 </div>
             </div>
-            <div class="banner">
-                <p>Got any questions?</p>
-                <button>
-                    Contact us
-                </button>
-            </div>
-        </main>
-        <footer></footer>
+        </div>
+        <div class="banner">
+            <p>Got any questions?</p>
+            <button>
+                Contact us
+            </button>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
