--- a/html/contact.html
+++ b/html/contact.html
@@ -12,70 +12,79 @@
     <title>Branc Name</title>
 </head>
 <body>
-        <!-- Use the header area for the website name or logo -->
-        <header></header>
-        <!-- Use the nav area to add hyperlinks to other pages within the website -->
-        <nav></nav>
-        <!-- Use the main area to add the main content of the webpage -->
-        <main>
-            <div class="blue content-padding">
-                <h1 class="heading">Contact us</h1>
-                <p class="heading-text">
-                    We can deliver and develop websites and mobile applications as per your needs.
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
-                </p>
-            </div>
-            <div class="content-padding">
-                <h1 class="sub-heading">Contact us</h1>
-                <div class="card-container sb">
-                    <div class="sub-text">
-                        <img src="../img/team.jpg" alt="team">
-                        <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, nobis distinctio aut omnis quidem in harum adipisci libero aspernatur odio a asperiores ratione saepe deserunt quibusdam hic voluptate ex autem!
-                        </p>
-                    </div>
-                    <div class="form-container">
-                        <form method="post" action="https://kgkog.mocklab.io/">
-                            <div class="form-controller-50">
-                                <input class="width-99 firstname" type="text" name="firstname" placeholder="First Name" maxlength="100" required>
-                            </div>
-                            <div class="form-controller-50">
-                                <input class="width-99 lastname" type="text" name="lastname" placeholder="Last Name" maxlength="100" required>
-                            </div>
-                            <div class="form-controller-50">
-                                <input class="width-99 firstname" type="tel" name="mobilenumber" placeholder="Mobile Number" required>
-                            </div>
-                            <div class="form-controller-50">
-                                <input class="width-99 lastname" type="email" name="email" placeholder="Email" maxlength="100" required>
-                            </div>
-                            <div class="form-controller-100">
-                                <select name="services" >
-                                    <option value="volvo">UI & UX</option>
-                                    <option value="volvo">UI & UX</option>
-                                    <option value="volvo">UI & UX</option>
-                                    <option value="volvo">UI & UX</option>
-                                    <option value="volvo">UI & UX</option>
-                                    <option value="volvo">UI & UX</option>
-                                    <option value="volvo">UI & UX</option>
-                                    <option value="volvo">UI & UX</option>
-                                </select>
-                            </div>
-                            <div class="form-controller-100">
-                                <textarea name="message" rows="10" placeholder="Message" minlength="20" maxlength="1000" required></textarea>
-                            </div>
-                            <input type="submit" value="submit">
-                        </form>
-                    </div>
+    <div class="content-padding navbar blue">
+        <header class="logo">
+            BRAND NAME
+        </header>
+        <!-- start nav section  -->
+        <nav class="nav-container">
+            <!-- css container for nav  -->
+                <a href="index.html">home</a>
+                <a href="about.html">about</a>
+                <a href="services.html">services</a>
+                <a href="contact.html" class="active">contact</a>
+        </nav>
+    </div>
+    <!-- Use the main area to add the main content of the webpage -->
+    <main>
+        <div class="blue content-padding">
+            <h1 class="heading">Contact us</h1>
+            <p class="heading-text">
+                We can deliver and develop websites and mobile applications as per your needs.
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+            </p>
+        </div>
+        <div class="content-padding">
+            <h1 class="sub-heading">Contact us</h1>
+            <div class="card-container sb">
+                <div class="sub-text">
+                    <img src="../img/team.jpg" alt="team">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, nobis distinctio aut omnis quidem in harum adipisci libero aspernatur odio a asperiores ratione saepe deserunt quibusdam hic voluptate ex autem!
+                    </p>
+                </div>
+                <div class="form-container">
+                    <form method="post" action="https://kgkog.mocklab.io/">
+                        <div class="form-controller-50">
+                            <input class="width-99 firstname" type="text" name="firstname" placeholder="First Name" maxlength="100" required>
+                        </div>
+                        <div class="form-controller-50">
+                            <input class="width-99 lastname" type="text" name="lastname" placeholder="Last Name" maxlength="100" required>
+                        </div>
+                        <div class="form-controller-50">
+                            <input class="width-99 firstname" type="tel" name="mobilenumber" placeholder="Mobile Number" required>
+                        </div>
+                        <div class="form-controller-50">
+                            <input class="width-99 lastname" type="email" name="email" placeholder="Email" maxlength="100" required>
+                        </div>
+                        <div class="form-controller-100">
+                            <select name="services" >
+                                <option value="volvo">UI & UX</option>
+                                <option value="volvo">UI & UX</option>
+                                <option value="volvo">UI & UX</option>
+                                <option value="volvo">UI & UX</option>
+                                <option value="volvo">UI & UX</option>
+                                <option value="volvo">UI & UX</option>
+                                <option value="volvo">UI & UX</option>
+                                <option value="volvo">UI & UX</option>
+                            </select>
+                        </div>
+                        <div class="form-controller-100">
+                            <textarea name="message" rows="10" placeholder="Message" minlength="20" maxlength="1000" required></textarea>
+                        </div>
+                        <input type="submit" value="submit">
+                    </form>
                 </div>
             </div>
-            <div class="banner">
-                <p>Got any questions?</p>
-                <button>
-                    Contact us
-                </button>
-            </div>
-        </main>
-        <!-- Use the footer area to add webpage footer content -->
-        <footer></footer>
+        </div>
+        <div class="banner">
+            <p>Got any questions?</p>
+            <button>
+                Contact us
+            </button>
+        </div>
+    </main>
+    <!-- Use the footer area to add webpage footer content -->
+    <footer></footer>
 </body>
 </html>
